--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My First Page</title>
+    <title>My First Page With CSS</title>
   </head>
   <body></body>
 </html>
