--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
     <title>My First Page With CSS</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Here's my first line!</h1>
+  </body>
 </html>
