--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Here's my first line!</h1>
+    <p>Here's a paragraph just so you know.</p>
+    <p>Here's another paragraph.</p>
   </body>
 </html>
