--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Here's my first line!</h1>
-    <p>Here's a paragraph just so you know.</p>
+ <p>    <p class="marketing-text">   
+    Here's a paragraph just so you know.</p></p>
     <p>Here's another paragraph.</p>
   </body>
 </html>
