This sould be it!

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <h1>Here's my first line!</h1>
- <p>    <p class="marketing-text">   
+ <p>    <p class="marketing-text" id="special">   
     Here's a paragraph just so you know.</p></p>
     <p>Here's another paragraph.</p>
+    <div class="content-container">
+        <p class="big-text">I AM SOME CONTENT</p></div>
+        <div class="content-container"><p class="big-text">I AM SOME CONTENT</p> </div>
   </body>
 </html>
